// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary when multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling 
    $94.34
  </h1>
</div>
`;

exports[`should render ExpensesSummary when one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $94.34
  </h1>
</div>
`;
